css/theme.css
/* ... */
@media (max-width: 576px) {
  .cursor {
    visibility: hidden;
  }
}
.cursor .cursor-text {
  position: absolute;
  z-index: 10;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  color: #000000;
  font-size: 60px;
  text-align: center;
  transition: linear all 0.2s;
}
.cursor .cursor-circle {
  position: relative;
  background-color: #0000ff;
  width: 30px;
  height: 30px;
  border: none;
  border-radius: 100% 100%;
  color: #fff;
  backface-visibility: hidden;
  -webkit-font-smoothing: subpixel-antialiased;
  transform: translateZ(0);
  transition: linear transform 0.2s;
}
.cursor.is-active .cursor-circle {
  background-color: #000;
}
.cursor.has-text .cursor-circle {
  visibility: hidden;
}

.site-container {
  width: calc(100vw - 100px);
  margin-left: 100px;
}
.container-background {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 100px;
  right: 0;
  z-index: -1;
  background-color: #ffffff;
  background-image: url("data:image/svg+xml,%3Csvg width='40' height='40' viewBox='20 20 60 60' xmlns='http://www.w3.org/2000/svg'%3E%3Cg fill='none' fill-rule='evenodd'%3E%3Cg fill='%23dddddd' fill-opacity='1.0'%3E%3Cpath d='M46,44v-4h-2v4h-4v2h4v4h2v-4h4v-2H46z M46,14v-4h-2v4h-4v2h4v4h2v-4h4v-2H46z M16,44v-4h-2v4h-4v2h4v4h2v-4 h4v-2H16z M16,14v-4h-2v4h-4v2h4v4h2v-4h4v-2H16z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
  background-position: center center;
}

.bg-none {
  background-color: rgba(0, 0, 0, 0);
}

.js-image {
  overflow: hidden;
}

.container {
  padding: 0;
}

.button {
  font-weight: 300;
  font-family: "Favorit", "Helvetica Neue", sans-serif;
}

.nav {
  position: fixed;
  z-index: 1000;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  padding: 10px 0px;
  height: 100vh;
  width: 100px;
  border-right: 2px solid black;
  background-color: white;
  font-size: 1.8em;
}
@media (max-width: 768px) {
  .nav {
    height: 100px;
    width: 100vw;
    flex-direction: row;
    border-bottom: 2px solid black;
    border-right: none;
    padding: 0px 10px;
  }
}
.nav .nav-brand {
  letter-spacing: 3px;
  font-kerning: none;
  border: none;
}
.nav .open-button {
  transform: scale(1.8);
  transform-origin: 47% 50%;
  transition: transform 0.5s ease-in-out;
}
@media (max-width: 768px) {
  .nav .open-button {
    transform: scale(1.5) rotate(90deg) translateX(-2px) translateY(10px);
  }
}
.nav .open-button.opened {
  transform: scale(1.8) rotate(-135deg) translateX(4px) translateY(7px);
}

.navbar {
  z-index: 1000;
  font-size: 1rem;
}
.navbar .navbar-brand {
  letter-spacing: 3px;
  font-kerning: none;
}
.navbar .navbar-title {
  margin: 0;
  color: #0000ff;
}
.navbar a {
  border-bottom: none;
}
.navbar .nav-link {
  padding-right: 0;
}

@media (max-width: 768px) {
  .card-stack {
    display: flex;
    flex-direction: column;
    padding-top: 100px;
  }
}

.content-card {
  position: fixed !important;
  z-index: 102;
  top: 0;
  left: 0;
  width: 500px;
  height: 350px;
  padding: 0 !important;
  box-shadow: 0 5px 20px 0 rgba(0, 0, 0, 0.2);
  overflow: hidden;
  border: 2px black solid;
  opacity: 1;
  transition: visible 0s linear 0.3s;
  color: white;
}
@media (max-width: 768px) {
  .content-card {
    position: relative !important;
    width: 100vw;
    height: 40vh;
  }
}
.content-card.card-hidden {
  visibility: hidden;
  opacity: 0;
}
.content-card .minimise {
  position: absolute;
  right: 0;
  top: 0;
  width: 40px;
  height: 40px;
  z-index: 1000;
  opacity: 1;
  text-align: center;
  display: flex;
  justify-content: center;
  align-items: center;
}
@media (max-width: 992px) {
  .content-card .minimise {
    opacity: 1;
  }
}
@media (max-width: 768px) {
  .content-card .minimise {
    visibility: hidden;
  }
}
.content-card .minimise span {
  font-size: 2rem;
  pointer-events: none;
}
.content-card figure {
  position: relative;
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  width: 100%;
  height: 100%;
}
.content-card.weight-1 {
  z-index: 101;
}
@media (min-width: 1200px) {
  .content-card.weight-1 {
    height: 10vw;
  }
}
.content-card.weight-2 {
  z-index: 102;
}
@media (min-width: 1200px) {
  .content-card.weight-2 {
    height: 15vw;
  }
}
.content-card.weight-3 {
  z-index: 103;
}
@media (min-width: 1200px) {
  .content-card.weight-3 {
    height: 20vw;
  }
}
.content-card.weight-4, .content-card.publications-card {
  z-index: 104;
}
@media (min-width: 1200px) {
  .content-card.weight-4, .content-card.publications-card {
    height: 25vw;
  }
}
.content-card.weight-5 {
  z-index: 105;
}
@media (min-width: 1200px) {
  .content-card.weight-5 {
    height: 30vw;
  }
}
.content-card.about-card {
  z-index: 106;
  color: white;
  font-size: 2rem;
  top: auto;
  bottom: 200px;
  left: 200px;
  background-color: #0000ff;
  width: 400px;
  height: 200px;
}
@media (max-width: 768px) {
  .content-card.about-card {
    display: none;
  }
}
.content-card.about-card p {
  margin: 30px;
}
.content-card.contact-card {
  z-index: 101;
  color: #0000ff;
  font-size: 3.6rem;
  top: auto;
  background-color: white;
  width: 800px;
  height: 500px;
}
.content-card.contact-card p {
  margin: 30px;
  width: 70%;
}
.content-card.contact-card ul {
  position: absolute;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  width: 600px;
  bottom: 0;
  right: 0;
  font-size: 2rem;
  list-style: none;
  justify-content: flex-end;
  text-align: right;
}
.content-card.contact-card ul .primary {
  position: relative;
  width: 100%;
  padding-right: 15px;
}
.content-card.contact-card ul .secondary {
  position: relative;
  width: auto;
  padding-right: 15px;
}
.content-card.publications-card {
  padding: 30px !important;
  background-color: white;
  color: #000;
  height: 70vh;
  max-height: 70vh;
}
.content-card.publications-card ul {
  list-style: none;
  padding: 0 !important;
  margin-top: 30px;
}
/* ... */

